--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -20,37 +20,42 @@ div.field, div.actions {
   margin-bottom: 10px;
 }
 
-#notice {
+.notice {
   color: green;
 }
 
-.field_with_errors {
+.fieldWithErrors {
   padding: 2px;
   background-color: red;
   display: table;
 }
 
-#error_explanation {
-  width: 450px;
+#errorExplanation {
+  width: 400px;
   border: 2px solid red;
   padding: 7px;
-  padding-bottom: 0;
+  padding-bottom: 12px;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 }
 
-#error_explanation h2 {
+#errorExplanation h2 {
   text-align: left;
   font-weight: bold;
   padding: 5px 5px 5px 15px;
   font-size: 12px;
   margin: -7px;
-  margin-bottom: 0px;
   background-color: #c00;
   color: #fff;
 }
 
-#error_explanation ul li {
+#errorExplanation p {
+  color: #333;
+  margin-bottom: 0;
+  padding: 5px;
+}
+
+#errorExplanation ul li {
   font-size: 12px;
   list-style: square;
 }
