--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -28,8 +28,12 @@
     <%= f.text_field :itunes_keywords %>
   </div>
   <div class="field">
-    <%= f.label :duration %><br />
+    <%= f.label :duration %> (hh:mm:ss)<br />
     <%= f.text_field :duration %>
+  </div>
+  <div class="field">
+    <%= f.label :length %> (size in bytes)<br />
+    <%= f.text_field :length %>
   </div>
   <div class="actions">
     <%= f.submit %>
