--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -7,6 +7,7 @@
     <th>Description</th>
     <th>Itunes keywords</th>
     <th>Duration</th>
+    <th>Size (in bytes)</th>
     <% if @current_user %>
     <th></th>
     <th></th>
@@ -21,6 +22,7 @@
     <td><%= episode.description %></td>
     <td><%= episode.itunes_keywords %></td>
     <td><%= episode.duration %></td>
+    <td><%= episode.length %></td>
     <% if @current_user %>
     <td><%= link_to 'Show', episode %></td>
     <td><%= link_to 'Edit', edit_episode_path(episode) %></td>
