Clipped length of subtitle to 255 characters. Added length to Episodes#show.

--- a/app/views/episodes/index.rss.erb
+++ b/app/views/episodes/index.rss.erb
@@ -25,7 +25,7 @@
   <item>
     <title><%= episode.title.to_xs %></title>
     <itunes:author>The Game Studio</itunes:author>
-    <itunes:subtitle><%= episode.description.to_xs %></itunes:subtitle>
+    <itunes:subtitle><%= clip_subtitle episode.description.to_xs %></itunes:subtitle>
     <itunes:summary><%= episode.description.to_xs %></itunes:summary>
     <enclosure url="<%= episode.file_url %>" type="audio/x-m4a" length="<%= episode.length %>" />
     <guid><%= episode.file_url %></guid>
