Added image tag

--- a/app/views/episodes/index.rss.erb
+++ b/app/views/episodes/index.rss.erb
@@ -16,6 +16,13 @@
     <itunes:email>psoplayer@gmail.com</itunes:email>
   </itunes:owner>
   <itunes:image href="http://www.archive.org/download/TheGameStudioPodcastLogo/podcast-logo.png" />
+  <image>
+    <title>The Game Studio Podcast</title>
+    <width>600</width>
+    <height>600</height>
+    <link>http://www.thegamestudio.net/</link>
+    <url>http://www.archive.org/download/TheGameStudioPodcastLogo/podcast-logo.png</url>
+  </image>
   <itunes:explicit>yes</itunes:explicit>
   <itunes:category text="Games &amp; Hobbies">
     <itunes:category text="Video Games"/>
